--- a/ch2.Rmd
+++ b/ch2.Rmd
@@ -114,6 +114,12 @@ barchart(ptabsex,horizontal=FALSE,
 ```
 
 >**Practice:**  Investigate graphically the Research Question:  "What percentage of students prefer to sit in the front of a classroom?"  Make a barchart of percentages.
+```{r}
+ptabseat <- with(m111survey,perctable(seat))
+barchart(ptabseat,horizontal=FALSE,
+         main="Distribution of Seat\n(Percentages)",
+         ylab="Percent")
+```
 
 ###  Research Question:  Who is more likely to sit in the front:  a guy or a gal?
 
@@ -125,7 +131,7 @@ This Research Question is about the relationship between **two categorical varia
 
 These are also called *cross-tables* or *contingency tables*.  Here's how you make a two-way table:
 ```{r}
-tabsexseat <- xtabs(~sex+seat,data=m111survey)
+tabsexseat <- xtabs(~seat,data=m111survey)
 tabsexseat
 ```
 In the formula above, the variable you put first goes along the rows of the table.  We like to put the explanatory variable first.
